# ubjansson

./: .gitignore  LICENSE  Makefile.am  configure.ac  ubjansson.pc.in
src/: Makefile.am  dump.c  jansson_private.h  load.c  ubjansson.h
test/: Makefile.am
